--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "luny"
-version = "0.1.1"
+version = "0.3.0"
 edition = "2021"
-rust-version = "1.80"
+rust-version = "1.85"
 description = "Multi-language TOON DOSE generator for AI-friendly codebase documentation"
 license = "MIT"
 repository = "https://github.com/jordanrinke/luny"
@@ -36,12 +36,20 @@ tree-sitter-rust = "0.23"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.148"
 walkdir = "2.5.0"
+ignore = "0.4"
+globset = "0.4"
 glob = "0.3.3"
 regex = "1.12.2"
 thiserror = "2.0.17"
 anyhow = "1.0.100"
 rayon = "1.11.0"
 once_cell = "1.21.3"
+
+# Token counting
+tiktoken-rs = "0.6"
+
+# Configuration
+toml = "0.8"
 
 [dev-dependencies]
 tempfile = "3.24.0"
